log
Wed, Mar 26, 2025  8:38:26 AM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:39:41 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
873170f
Wed, Mar 26, 2025  8:43:47 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
458e1ee
Wed, Mar 26, 2025  8:46:04 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:25: error: 'List {aka struct List}' has no member named 'next'
     list->current = list->next;
                         ^~
Compilation failed
957426b
Wed, Mar 26, 2025  8:46:45 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6671621
Wed, Mar 26, 2025  8:48:19 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
7e18185
Wed, Mar 26, 2025  8:51:27 AM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:57:18: error: passing argument 1 of 'nextList' from incompatible pointer type [-Werror=incompatible-pointer-types]
         nextList(aux);
                  ^~~
list.c:45:8: note: expected 'List * {aka struct List *}' but argument is of type 'Node * {aka struct Node *}'
 void * nextList(List * list) {
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c892341
Wed, Mar 26, 2025  8:53:48 AM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5f3ab1c
